# Log-files-analyser

./: AnalyzerWorker.cpp  AnalyzerWorker.hpp  CMakeLists.txt  DependencyGraph.cpp  DependencyGraph.hpp  Dictionary.cpp  Dictionary.hpp  Dictionary.json  DynamicArray.hpp  Event.cpp  Event.hpp  EventAnalyzer.cpp  EventAnalyzer.hpp  EventGenerator.cpp  EventGenerator.hpp  GeneratorWorker.cpp  GeneratorWorker.hpp  LazyReadStream.cpp  LazyReadStream.hpp  LazyWriteStream.cpp  LazyWriteStream.hpp  LinkedList.hpp  MainWindow.cpp  MainWindow.hpp  Sequence.hpp  UserInterface.cpp  UserInterface.hpp  lab5_app  main.cpp
